; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_clfactory.c_ngx_http_lua_clfactory_errfile.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_clfactory.c_ngx_http_lua_clfactory_errfile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [17 x i8] c"cannot %s %s: %s\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"cannot %s %s\00", align 1
@LUA_ERRFILE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32)* @ngx_http_lua_clfactory_errfile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ngx_http_lua_clfactory_errfile(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i8* @lua_tostring(i32* %9, i32 %10)
  %12 = getelementptr inbounds i8, i8* %11, i64 1
  store i8* %12, i8** %8, align 8
  %13 = load i64, i64* @errno, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %23

15:                                               ; preds = %3
  %16 = load i64, i64* @errno, align 8
  %17 = call i8* @strerror(i64 %16)
  store i8* %17, i8** %7, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = call i32 (i32*, i8*, i8*, i8*, ...) @lua_pushfstring(i32* %18, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* %19, i8* %20, i8* %21)
  br label %28

23:                                               ; preds = %3
  %24 = load i32*, i32** %4, align 8
  %25 = load i8*, i8** %5, align 8
  %26 = load i8*, i8** %8, align 8
  %27 = call i32 (i32*, i8*, i8*, i8*, ...) @lua_pushfstring(i32* %24, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i8* %25, i8* %26)
  br label %28

28:                                               ; preds = %23, %15
  %29 = load i32*, i32** %4, align 8
  %30 = load i32, i32* %6, align 4
  %31 = call i32 @lua_remove(i32* %29, i32 %30)
  %32 = load i32, i32* @LUA_ERRFILE, align 4
  ret i32 %32
}

declare dso_local i8* @lua_tostring(i32*, i32) #1

declare dso_local i8* @strerror(i64) #1

declare dso_local i32 @lua_pushfstring(i32*, i8*, i8*, i8*, ...) #1

declare dso_local i32 @lua_remove(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
